init cong trinh